--- a/backend/rust-server/Cargo.toml
+++ b/backend/rust-server/Cargo.toml
@@ -7,3 +7,10 @@ edition = "2024"
 tokio = { version = "1", features = ["full"] }
 sqlx = { version = "0.7", features = ["runtime-tokio-native-tls", "mysql"] }
 dotenvy = "0.15"
+axum = { version = "0.7", features = ["ws"] }
+serde = { version = "1", features = ["derive"] }
+tracing = "0.1"
+tracing-subscriber = "0.3"
+futures = "0.3.31"
+# 用於產生 ID
+rs-snowflake = "0.6"
